# av

./: Cargo.toml  README.md  SELFHOSTING.md
.cargo/: config.toml
client/: .gitignore  Cargo.toml
client/src/: actor.rs  camera.rs  cursor.rs  debug_tools.rs  experience.rs  extrapolate_move.rs  health.rs  input.rs  level.rs  main.rs  mana.rs  movement_state.rs  owner.rs  player.rs  secondary_stats.rs  transform.rs  world.rs
client/src/actor/: extrapolate.rs  interpolate.rs  mod.rs  replication.rs
client/src/module_bindings/: actor_in_aoi_table.rs  actor_in_aoi_type.rs  actor_kind_type.rs  actor_table.rs  actor_type.rs  aoi_tick_reducer_reducer.rs  aoi_tick_timer_table.rs  aoi_tick_timer_type.rs  collider_shape_type.rs  db_capsule_type.rs  db_cone_type.rs  db_cylinder_type.rs  db_quat_type.rs  db_round_cone_type.rs  db_round_cuboid_type.rs  db_round_cylinder_type.rs  db_vec_3_type.rs  enter_world_reducer.rs  kcc_settings_table.rs  kcc_settings_type.rs  leave_world_reducer.rs  mod.rs  move_intent_type.rs  movement_tick_reducer_reducer.rs  movement_tick_timer_table.rs  movement_tick_timer_type.rs  player_table.rs  player_type.rs  projectile_table.rs  projectile_type.rs  request_move_reducer.rs  spawn_fake_remotes_reducer.rs  tick_reducer.rs  tick_timer_table.rs  tick_timer_type.rs  world_static_table.rs  world_static_type.rs
client/src/movement/: input.rs  mod.rs  movement_state.rs  transform.rs
client/src/player/: input.rs  interpolate.rs  mod.rs  replication.rs
client/src/server/: mod.rs  reducers.rs  types.rs
server/: Cargo.toml
server/src/: active_character.rs  actor.rs  character.rs  character_instance.rs  lib.rs  mod.rs  model.rs  monster.rs  monster_instance.rs  move_intent.rs  movement_state.rs  npc.rs  physics.rs  player.rs  process_move_intent.rs  request_move.rs  schema.rs  status_flags.rs  transform.rs  types.rs  util.rs  utils.rs  views.rs  world.rs  world_static.rs
server/src/foo/: active_character.rs  actor.rs  character.rs  class.rs  data_table.rs  experience.rs  gameplay_flags.rs  health.rs  level.rs  mana.rs  mod.rs  monster.rs  monster_instance.rs  move_intent.rs  movement_speed.rs  movement_state.rs  npc.rs  player.rs  primary_stats.rs  process_move_intent.rs  progression.rs  quat.rs  request_move.rs  secondary_stats.rs  status_flags.rs  tables.rs  tags.rs  transform.rs  vector.rs  vital_stats.rs
server/src/foo/bounded_stat/: health.rs  mana.rs  mod.rs
server/src/foo/computed_stat/: critical_hit_chance.rs  mod.rs  movement_speed.rs
server/src/foo/computed_stats/: critical_hit_chance.rs  mod.rs  movement_speed.rs
server/src/foo/primitives/: mod.rs  shape.rs
server/src/foo/progression/: experience.rs  level.rs  mod.rs  progression_system.rs
server/src/foo/stat/: health.rs  mana.rs  mod.rs  primary_stats.rs  secondary_stats.rs
server/src/movement/: mod.rs  move_intent.rs  movement_state.rs  movement_tick.rs  process_move_intent.rs  request_move.rs
server/src/primitives/: mod.rs  quat.rs  shape.rs  vector.rs
server/src/progression/: experience.rs  level.rs  progression_system.rs
server/src/reducers/: aoi_tick.rs  connection.rs  enter_world.rs  leave_world.rs  movement.rs  movement_tick.rs  request_move.rs  spawn_fake.rs  spawn_fake_remotes.rs  tick.rs
server/src/reducers/movement_tick/: constants.rs  mod.rs  non_player_tick.rs  player_tick.rs  utils.rs
server/src/reducers/overlap_push/: mod.rs
server/src/schema/: actor_table.rs  kcc_settings_table.rs  mod.rs  player_table.rs  primary_stats_table.rs  secondary_stats_table.rs  transform_data_table.rs  vital_stats_table.rs  world_static_table.rs
server/src/stat/: health.rs  mana.rs  mod.rs  primary_stats.rs  regen_stats.rs  secondary_stats.rs
server/src/types/: actor_kind.rs  aoi_actor.rs  aoi_secondary_stats.rs  db_quat.rs  db_vec3.rs  mod.rs  move_intent.rs  shapes.rs
server/src/views/: aoi_actor_view.rs  aoi_secondary_stats_view.rs  aoi_transform_data_view.rs  mod.rs
shared/: Cargo.toml
shared/src/: bitmask_flags.rs  cell.rs  collision.rs  constants.rs  lib.rs  motion.rs  movement.rs  owner.rs  quantize.rs  rapier.rs  rapier_world.rs  utils.rs
shared/src/collision/: broad.rs  ground.rs  kinematic.rs  mod.rs  narrow_phase.rs  settings.rs  types.rs
