[workspace]
members = ["server", "client", "shared"]
# Use Cargo feature resolver v3 to unify features across the workspace.
# Rust 2024 crates default to v3, but the workspace itself has no edition,
# so we set it explicitly to avoid duplicate dependencies or conflicting features.
resolver = "3"

[workspace.dependencies]
glam = { version = "0.30.9" }
