[workspace]
members = ["server", "client", "shared"]
# Use Cargo feature resolver v3 to unify features across the workspace.
# Rust 2024 crates default to v3, but the workspace itself has no edition,
# so we set it explicitly to avoid duplicate dependencies or conflicting features.
resolver = "3"

[workspace.dependencies]
nalgebra = "0.34.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
