[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = {version = "1.11.1"}
log = "0.4"
num-traits = "0.2.19"

shared = { path = "../shared" }
nalgebra = {workspace = true}
rapier3d = { workspace = true }
