[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
rapier3d = "0.31.0"
nalgebra = { workspace = true }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
